master#fix-footer-valign

--- a/public/css/diags.design.css
+++ b/public/css/diags.design.css
@@ -565,9 +565,9 @@ footer .title-2 {
     font-size: 38px;
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 1200px) {
     footer .title-1, footer .title-2 {
-/*        line-height: 98px;*/
+        line-height: 98px;
     }
 }
 
